# duck_v1_raspberry

ard/: a.ino  eft RPM 0 00 Right RPM.txt  frames_2025-09-24_19.27.36.gv  robot_slam_params.yaml
ard/duck_set_pwm/: duck_set_pwm.ino
ard/maps/: amcl_localization.yaml  my_map.pgm  my_map.yaml  nav2_params.yaml
ard/pwn_corr/: pwn_corr.ino
ard/pwn_corr2/: pwn_corr2.ino
duck_bringup/: package.xml  setup.py
duck_bringup/docs/: IMU_CALIBRATION_GUIDE.md  IMU_CALIBRATION_QUICK_START.md  WHEEL_ENCODER_DRIFT_SOLUTIONS.md
duck_bringup/launch/: duck_full_stack.launch.py  duck_sequenced_bringup.launch.py  real_robot.launch.py
duck_bringup/scripts/: diagnose_drift.py  imu_calibration.py
duck_control/: CMakeLists.txt  package.xml
duck_control/config/: duck_controllers.yaml
duck_control/duck_control/: noisy_controller.py  simple_controller.py  twist_relay.py
duck_control/launch/: controller.launch.py  joystick_teleop.launch.py
duck_control/src/: noisy_controller.cpp  (+2 more)
duck_description/: CMakeLists.txt  package.xml
duck_firmware/: CMakeLists.txt  duck_interface.xml  package.xml
duck_localization/: setup.py
duck_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
duck_navigation/: CMakeLists.txt  package.xml
motor_driver/: package.xml  setup.py
serial_led_sender/: CMakeLists.txt  package.xml
serial_led_sender/src/: serial_sender_node.cpp
temp/: duck_teleop.py  frames_2026-01-01_18.55.39.gv  frames_2026-01-03_21.26.49.gv  frames_2026-01-05_19.44.38.gv  gyro_bias.py  logs.txt  path_to_smoother.py  reboot_service.py  wifi_reset_button.py
(+69 files in other folders)
